--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 .idea/
 target/
 build/
+out/
 .gradle/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
