--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,13 +12,8 @@ server:
   http2:
     enabled: true
   netty:
-    threads: 16
     connection-timeout: 1000ms
     validate-headers: true
-    max-chunk-size: 8192B
-    initial-buffer-size: 1024B
-    max-initial-line-length: 4096B
-    h2c-max-content-length: 0B
   error:
     include-binding-errors: always
   forward-headers-strategy: framework
@@ -32,17 +27,14 @@ spring:
   codec:
     log-request-details: true
   cache:
-    type: redis
-    redis:
-      cache-null-values: true
-      key-prefix: untitled
-      time-to-live: 10000ms
-      enable-statistics: true
-      use-key-prefix: true
+    type: simple
   jackson:
     locale: en_US
     property-naming-strategy: SNAKE_CASE
-kmongo:
+mongodb:
+    uri: mongodb://localhost:27017
+
+
 
 
 springdoc:
@@ -50,6 +42,7 @@ springdoc:
     path: /api-docs
     enabled: true
   swagger-ui:
+    path: /api-docs/swagger-ui.html
     enabled: true
 
 logging:
