--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -19,9 +19,11 @@ server:
   forward-headers-strategy: framework
 
 spring:
+  application:
+    name: untitled
   main:
     banner-mode: off
-    cloud-platform: kubernetes
+    cloud-platform: none
     log-startup-info: on
     web-application-type: reactive
   codec:
@@ -31,52 +33,55 @@ spring:
   jackson:
     locale: en_US
     property-naming-strategy: SNAKE_CASE
-  security:
-    oauth2:
-      client:
-        registration:
-          google:
-            client-id: ${GOOGLE_CLIENT_ID}
-            client-secret: ${GOOGLE_CLIENT_SECRET}
-            scope: openid,profile,email
-            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
-            authorization-grant-type: authorization_code
-            client-name: Google
-          facebook:
-            client-id: ${FACEBOOK_CLIENT_ID}
-            client-secret: ${FACEBOOK_CLIENT_SECRET}
-            scope: email,public_profile
-            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
-            authorization-grant-type: authorization_code
-            client-name: Facebook
-          twitter:
-            client-id: ${TWITTER_CLIENT_ID}
-            client-secret: ${TWITTER_CLIENT_SECRET}
-            scope: email,public_profile
-            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
-            authorization-grant-type: authorization_code
-            client-name: Twitter
-          tiktok:
-            client-id: ${TIKTOK_CLIENT_ID}
-            client-secret: ${TIKTOK_CLIENT_SECRET}
-            scope: user.info.basic.read
-            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
-            authorization-grant-type: authorization_code
-            client-name: TikTok
-          vk:
-            client-id: ${VK_CLIENT_ID}
-            client-secret: ${VK_CLIENT_SECRET}
-            scope: email,public_profile
-            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
-            authorization-grant-type: authorization_code
-            client-name: VK
-          linkedin:
-            client-id: ${LINKEDIN_CLIENT_ID}
-            client-secret: ${LINKEDIN_CLIENT_SECRET}
-            scope: r_liteprofile,r_emailaddress
-            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
-            authorization-grant-type: authorization_code
-            client-name: LinkedIn
+#  security:
+#    oauth2:
+#      client:
+#        registration:
+#          google:
+#            client-id: ${GOOGLE_CLIENT_ID}
+#            client-secret: ${GOOGLE_CLIENT_SECRET}
+#            scope: openid,profile,email
+#            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+#            authorization-grant-type: authorization_code
+#            client-name: Google
+#          facebook:
+#            client-id: ${FACEBOOK_CLIENT_ID}
+#            client-secret: ${FACEBOOK_CLIENT_SECRET}
+#            scope: email,public_profile
+#            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+#            authorization-grant-type: authorization_code
+#            client-name: Facebook
+#          twitter:
+#            client-id: ${TWITTER_CLIENT_ID}
+#            client-secret: ${TWITTER_CLIENT_SECRET}
+#            scope: email,public_profile
+#            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+#            authorization-grant-type: authorization_code
+#            client-name: Twitter
+#          tiktok:
+#            client-id: ${TIKTOK_CLIENT_ID}
+#            client-secret: ${TIKTOK_CLIENT_SECRET}
+#            scope: user.info.basic.read
+#            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+#            authorization-grant-type: authorization_code
+#            client-name: TikTok
+#          vk:
+#            client-id: ${VK_CLIENT_ID}
+#            client-secret: ${VK_CLIENT_SECRET}
+#            scope: email,public_profile
+#            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+#            authorization-grant-type: authorization_code
+#            client-name: VK
+#          linkedin:
+#            client-id: ${LINKEDIN_CLIENT_ID}
+#            client-secret: ${LINKEDIN_CLIENT_SECRET}
+#            scope: r_liteprofile,r_emailaddress
+#            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+#            authorization-grant-type: authorization_code
+#            client-name: LinkedIn
+#    user:
+#      name: untitled
+#      password: password
 
 
 mongodb:
