--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,7 @@
 kotlin.code.style=official
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.daemon=true
+org.gradle.vfs.watch=true
+org.gradle.warning.mode=all
+org.gradle.java.installations.auto-download=false
