--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -32,56 +32,35 @@ spring:
   jackson:
     locale: en_US
     property-naming-strategy: SNAKE_CASE
-#  security:
-#    oauth2:
-#      client:
-#        registration:
-#          google:
-#            client-id: ${GOOGLE_CLIENT_ID}
-#            client-secret: ${GOOGLE_CLIENT_SECRET}
-#            scope: openid,profile,email
-#            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
-#            authorization-grant-type: authorization_code
-#            client-name: Google
-#          facebook:
-#            client-id: ${FACEBOOK_CLIENT_ID}
-#            client-secret: ${FACEBOOK_CLIENT_SECRET}
-#            scope: email,public_profile
-#            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
-#            authorization-grant-type: authorization_code
-#            client-name: Facebook
-#          twitter:
-#            client-id: ${TWITTER_CLIENT_ID}
-#            client-secret: ${TWITTER_CLIENT_SECRET}
-#            scope: email,public_profile
-#            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
-#            authorization-grant-type: authorization_code
-#            client-name: Twitter
-#          tiktok:
-#            client-id: ${TIKTOK_CLIENT_ID}
-#            client-secret: ${TIKTOK_CLIENT_SECRET}
-#            scope: user.info.basic.read
-#            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
-#            authorization-grant-type: authorization_code
-#            client-name: TikTok
-#          vk:
-#            client-id: ${VK_CLIENT_ID}
-#            client-secret: ${VK_CLIENT_SECRET}
-#            scope: email,public_profile
-#            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
-#            authorization-grant-type: authorization_code
-#            client-name: VK
-#          linkedin:
-#            client-id: ${LINKEDIN_CLIENT_ID}
-#            client-secret: ${LINKEDIN_CLIENT_SECRET}
-#            scope: r_liteprofile,r_emailaddress
-#            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
-#            authorization-grant-type: authorization_code
-#            client-name: LinkedIn
-#    user:
-#      name: untitled
-#      password: password
-
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${GOOGLE_CLIENT_ID:1085568731501-bf0c17m61e63npklsel9c74b8qoh4f8j.apps.googleusercontent.com}
+            client-secret: ${GOOGLE_CLIENT_SECRET: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}
+            scope: openid,profile,email
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+            authorization-grant-type: authorization_code
+            client-name: Google
+          facebook:
+            client-id: ${FACEBOOK_CLIENT_ID:1050664762695244}
+            client-secret: ${FACEBOOK_CLIENT_SECRET:fb6f6c8f416aa193f9203cac2d358099}
+            scope: email,public_profile
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+            authorization-grant-type: authorization_code
+            client-name: Facebook
+        provider:
+            google:
+                authorization-uri: https://accounts.google.com/o/oauth2/auth
+                token-uri: https://oauth2.googleapis.com/token
+                user-info-uri: https://openidconnect.googleapis.com/v1/userinfo
+                user-name-attribute: sub
+            facebook:
+                authorization-uri: https://www.facebook.com/v9.0/dialog/oauth
+                token-uri: https://graph.facebook.com/v9.0/oauth/access_token
+                user-info-uri: https://graph.facebook.com/me?fields=id,name,email
+                user-name-attribute: id
 
 mongodb:
     uri: ${MONGO_URL:mongodb://untitled:password@localhost:27017/?retryWrites=true&serverSelectionTimeoutMS=5000&connectTimeoutMS=10000&authSource=admin&authMechanism=SCRAM-SHA-1}
